# event-service

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/: events.py
app/consumers/: __init__.py  events.py  retransmit.py
app/messaging/: publisher.py  retransmitter.py
app/schemas/: events.py
app/storage/clickhouse/: client.py
commands/: produce_test_events.py  run_clickhouse_migrations.py
migrations/clickhouse/: 001_create_events_table.sql
